# git2txt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml  test.yml
src/: git.rs  scanner.rs
